# Pomodoro

./: alembic.ini  dependencies.py  docker-compose.test.yml  docker-compose.yml  fixtures.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 24fc66b140be_user_init.py  3b14e629d6c5_user_id_in_tasks.py  4e3564adbfbf_initial_migration.py  52a6833a9ea1_extend_user_profile.py  754e3d56a81c_access_token_nullable.py  ae2166b64c07_access_token_delete.py  d9199f329c4c_add_yandex_access_token.py  deb6bdebcb64_username_password_nullable.py
app/: dependencies.py  exception.py  main.py
app/client/: __init__.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py
app/models/: __init__.py  tasks.py  user.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/schema/: __init__.py  auth.py  task.py
app/service/: auth.py  task.py  user.py
cache/: accessor.py
client/: __init__.py  google.py  yandex.py
database/: accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  user_repository.py
tests/integration/auth/: test_auth_service.py
(+1 files in other folders)
